--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,7 +12,7 @@
 			<link rel="stylesheet" href="{{ asset("styles/fancybox/source/helpers/jquery.fancybox-buttons.css") }}">
 			<script src="{{ asset("https://code.jquery.com/jquery-3.2.1.js") }}"></script>
         {% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ asset('images/fav.png') }}" />
     </head>
 {% endblock %}
 <body>
@@ -30,7 +30,7 @@
 					<a href="{{ path('project_designer') }}">Заявки Вали</a>
 					{% endif %}					
                     <a href="{{ path('project_archive') }}">Архивирани Заявки</a>
-                    {% if (app.user.type == "Manager") or (app.user.type == "LittleBoss") %}
+                    {% if (app.user.type == "Manager") or (app.user.type == "LittleBoss" and app.user.username != "a.vali" ) %}
                     <a href="{{ path('project_new') }}">Нова заявка</a>
                     {% endif %}
                 {% else %}
