--- a/app/Resources/views/project/show.html.twig
+++ b/app/Resources/views/project/show.html.twig
@@ -74,6 +74,10 @@
                 <th>Приключилa </th>
                 <td>{% if project.isOver %}Да{% else %}Не{% endif %}</td>
             </tr>
+            <tr>
+                <th>Линк</th>
+                <td style="cursor:pointer" onclick="window.open('{{ project.ManagerLink }}')">{{ project.ManagerLink }}</td>
+            </tr>
             {% if project.isOver %}
             <tr>
                 <th>Дата на приключване </th>
@@ -98,7 +102,7 @@
 				<div class="query_buttons">
 					{{ form_start(delete_form) }}
 					<div class="col-md-2">
-						<input id="button_delete" type="submit" value="Изтрий"><div class="delete_icon"></div>
+						<input id="button_delete" readonly="readonly" type="submit" value="Изтрий"><div class="delete_icon"></div>
 					</div>
 					{{ form_end(delete_form) }}
 				</div>
@@ -108,22 +112,22 @@
                 <form action="{{ path('project_fast_update', { 'id': project.id }) }}" method="post" style="margin-top: 10px; margin-left: 0px; margin-right: 0px;">
 					{% if project.forApproval or project.isApproved and ( app.user.type == "LittleBoss" or app.user.type == "Boss" )  %}
                     <div class="col-md-2">
-                        <input type="submit" id="approve" name="approve" value="Одобрявам"><div class="approve_icon"></div>
+                        <input type="submit" readonly="readonly" id="approve" name="approve" value="Одобрявам"><div class="approve_icon"></div>
                     </div>
                     <div class="col-md-2">
-                        <input type="submit" id="reject" name="reject" value="Отхвърлям"><div class="reject_icon"></div>
+                        <input type="submit" readonly="readonly" id="reject" name="reject" value="Отхвърлям"><div class="reject_icon"></div>
                     </div>
 					{% else %}
                     <div class="col-md-2">
-                        <input type="submit" id="hold" name="hold" value="На изчакване"><div class="hold_icon"></div>
+                        <input type="submit" readonly="readonly" id="hold" name="hold" value="На изчакване"><div class="hold_icon"></div>
                     </div>
                     <div class="col-md-2">
-                        <input type="submit" id="forApproval" name="forApproval" value="За одобрение"/><div class="forApproval_icon"></div>
+                        <input type="submit" readonly="readonly" id="forApproval" name="forApproval" value="За одобрение"/><div class="forApproval_icon"></div>
                     </div>
 					{% endif %}
 					{% if project.isApproved %}
 					<div class="col-md-3">
-						<input type="submit" id="archive" name="archive" value="Архивирай"><div class="archive_icon"></div>
+						<input type="submit" readonly="readonly" id="archive" name="archive" value="Архивирай"><div class="archive_icon"></div>
 					</div>
 					{% endif %}
                 </form>
@@ -133,17 +137,21 @@
         <div class="row" style="background: #dde5ee;">
             <div class="query_buttons">
                 <div class="col-md-4">
-                    <input id="button_edit" value="Обратно към заявките" onclick="location.href='{{ path('project_index') }}'"/><div class="back_icon"></div>
+                    <input id="button_edit" readonly="readonly" value="Обратно към заявките" onclick="location.href='{{ path('project_index') }}'"/><div class="back_icon"></div>
                 </div>
                 {% if app.user.type == "LittleBoss" or app.user.type == "Boss"  %}
                 <div class="col-md-2">
-                    <input id="button_edit" value="Промяна" onclick="location.href='{{ path('project_edit', { 'id': project.id }) }}'"/><div class="edit_icon"></div>
+                    <input id="button_edit" readonly="readonly" value="Промяна" onclick="location.href='{{ path('project_edit', { 'id': project.id }) }}'"/><div class="edit_icon"></div>
                 </div>
 				{% endif %}
             </div>
         </div>
 
+		{% if comments == false %}
+		<h1>Няма коментари</h1>
+		{% else %}
 		<h1>Коментари</h1>
+		{% endif %}
         <div class="row">
             <div class="container" id="comments">
                 {% for comment in comments %}
