Textarea - id, name
Textarea - id, name

--- a/app/Resources/views/project/index.html.twig
+++ b/app/Resources/views/project/index.html.twig
@@ -132,7 +132,7 @@
 										<span class="close" onclick="btnHidePopup({{ project.id }})">&times;</span>
 										<p>Сигурни ли сте, че искате да отхвърлите заявката?</p>
                                         <p>Напишете причина.</p>
-										<textarea id="comment_reject"></textarea>
+										<textarea id="rejectComment" name="rejectComment" required="required"></textarea>
 										<div id="name-error" class="error"></div>
 										<div style="height: 40px; margin-top: 20px;">
 											<div class="col-md-2">
