Designer upload file
Designer upload file

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -584,8 +584,8 @@ input#archive{
 	cursor:pointer;
 	opacity:0.8;
 }
-#approveImages{
-	display:none;
+.approveImages{
+
 }
 #forApproval, #working{
 	background-color: #84cc06 ;
