--- a/app/Resources/views/project/index.html.twig
+++ b/app/Resources/views/project/index.html.twig
@@ -78,7 +78,7 @@
 						</div>
 					    {% else %}
 							<form action="{{ path('project_update', { 'id': project.id }) }}" method="post">
-					            {% if project.forApproval or project.isApproved and ( app.user.type == "LittleBoss" or app.user.type == "Boss" ) %}
+					            {% if ( project.forApproval or project.isApproved ) and ( app.user.type == "LittleBoss" or app.user.type == "Boss" ) %}
 								<div class="col-md-2">
 									<input type="submit" readonly="readonly" id="approve" name="approve" value="Одобрявам"><div class="approve_icon"></div>
 								</div>
@@ -96,16 +96,18 @@
                                 {% endif %}		
 							    </form>	
 								{% if app.user.type == "Designer" %}
-							    <form action="{{ path('image_upload', { 'id': project.id }) }}" method="post">								
+							    <form action="{{ path('project_update', { 'id': project.id }) }}" method="post">
 									<div class="col-md-2">
 										<input type="submit" readonly="readonly" id="working" name="working" value="Работи се"/><div class="working_icon"></div>
-									</div>	
+									</div>		
+							    </form>	
+							    <form action="{{ path('image_upload', { 'id': project.id }) }}" method="post" name="form" id="project7">								
 									<div class="col-md-2" id="imageUpload">
 										<span>Прикачи файл</span>
-										<input type="file" readonly="readonly" id="imageUpload" name="image_upload" onclick="btnUploadImages({{ project.id }})"/><div class="upload_icon"></div>
+										<input type="file" readonly="readonly" id="imageUpload" name="image_upload" multiple/><div class="upload_icon"></div>
 									</div>	
-									<div class="col-md-2" id="approveImages">
-										<input id="{{ project.id }}" readonly="readonly" type="submit" value="Запази"><div class="save_new_query_icon"></div>
+									<div class="col-md-2 approveImages" id="{{ project.id }}">
+										<input id="approve" readonly="readonly" type="submit" value="Запази"><div class="save_new_query_icon"></div>
 									</div>
 							    </form>	
 					            {% endif %}
