--- a/app/Resources/views/project/index.html.twig
+++ b/app/Resources/views/project/index.html.twig
@@ -37,8 +37,8 @@
                     <td class="user">{{ project.fromUser }}</td>
                     <td class="type">{{ project.typeTask }}</td>
                     <td class="more">{{ project.description }}</td>
-                    <td class="date">{% if project.term %}{{ project.term|date('d-m-Y H:i:s') }}{% endif %}</td>
-                    <td class="date">{% if project.date %}{{ project.date|date('d-m-Y H:i:s') }}{% endif %}</td>
+                    <td class="date">{% if project.term %}{{ project.term|date('d-m H:i:s') }}{% endif %}</td>
+                    <td class="date">{% if project.date %}{{ project.date|date('d-m H:i:s') }}{% endif %}</td>
 					{% if app.user.type == "LittleBoss" or app.user.type == "Boss"  %}
                     <td>{{ project.designer }}</td>
 					{% else %}
@@ -104,11 +104,8 @@
 							    <form action="{{ path('image_upload', { 'id': project.id }) }}" method="post" name="form" id="project7">								
 									<div class="col-md-2" id="imageUpload">
 										<span>Прикачи файл</span>
-										<input type="file" readonly="readonly" id="imageUpload" name="image_upload" multiple/><div class="upload_icon"></div>
+										<input type="file" readonly="readonly" id="imageUpload" name="image_upload[]" onchange="form.submit()" multiple/><div class="upload_icon"></div>
 									</div>	
-									<div class="col-md-2 approveImages" id="{{ project.id }}">
-										<input id="approve" readonly="readonly" type="submit" value="Запази"><div class="save_new_query_icon"></div>
-									</div>
 							    </form>	
 					            {% endif %}
 
