--- a/app/Resources/views/project/index.html.twig
+++ b/app/Resources/views/project/index.html.twig
@@ -37,8 +37,8 @@
                     <td class="user">{{ project.fromUser }}</td>
                     <td class="type">{{ project.typeTask }}</td>
                     <td class="more">{{ project.description }}</td>
-                    <td class="date">{% if project.term %}{{ project.term|date('d-m H:i:s') }}{% endif %}</td>
-                    <td class="date">{% if project.date %}{{ project.date|date('d-m H:i:s') }}{% endif %}</td>
+                    <td class="date">{% if project.term and project.withoutTerm %}Без срок{% else %}{{ project.term|date('d M H:i:s') }}{% endif %}</td>
+                    <td class="date">{% if project.date %}{{ project.date|date('d M H:i:s') }}{% endif %}</td>
 					{% if app.user.type == "LittleBoss" or app.user.type == "Boss"  %}
                     <td>{{ project.designer }}</td>
 					{% else %}
@@ -96,12 +96,7 @@
                                 {% endif %}		
 							    </form>	
 								{% if app.user.type == "Designer" %}
-							    <form action="{{ path('project_update', { 'id': project.id }) }}" method="post">
-									<div class="col-md-2">
-										<input type="submit" readonly="readonly" id="working" name="working" value="Работи се"/><div class="working_icon"></div>
-									</div>		
-							    </form>	
-							    <form action="{{ path('image_upload', { 'id': project.id }) }}" method="post" name="form">
+							    <form action="{{ path('image_upload', { 'id': project.id }) }}" method="post" name="form">								
 									<div class="col-md-2" id="imageUpload">
 										<span>Прикачи файл</span>
 										<input type="file" readonly="readonly" id="imageUpload" name="image_upload[]" onchange="form.submit()" multiple/><div class="upload_icon"></div>
