--- a/app/Resources/views/project/index.html.twig
+++ b/app/Resources/views/project/index.html.twig
@@ -96,12 +96,14 @@
                                 {% endif %}		
 							    </form>	
 								{% if app.user.type == "Designer" %}
-							    <form action="{{ path('image_upload', { 'id': project.id }) }}" method="post" name="form">								
+                                    {{ form_start(add_files_form, {'action':path('image_upload', { 'id': project.id }),'attr': {'id': project.id}, 'method': 'POST'}) }}
+                                    {{ form_end(add_files_form) }}
+							    <!--<form action="" method="post" name="form">
 									<div class="col-md-2" id="imageUpload">
 										<span>Прикачи файл</span>
 										<input type="file" readonly="readonly" id="imageUpload" name="image_upload[]" onchange="form.submit()" multiple/><div class="upload_icon"></div>
-									</div>	
-							    </form>	
+									</div>
+							    </form>!-->
 					            {% endif %}
 
 					{% endif %}						
