--- a/app/Resources/views/project/show.html.twig
+++ b/app/Resources/views/project/show.html.twig
@@ -91,14 +91,26 @@
             {% endif %}
             </tbody>
         </table>
-		<h1>Прикачени файлове</h1>
+		{% if app.user.type == "LittleBoss" or app.user.type == "Boss" %}
+		<h1>Прикачени файлове от Жени</h1>
+		{% elseif  app.user.type == "Manager" %}
+		<h1>Прикачени файлове от управител</h1>
+		{% else %}
+		<h1>Прикачени файлове от дизайнер</h1>
+		{% endif %}
 		<div class="row" style="background: #f0d9d9;">
 		{% for file in managerFiles %}
-		{% if file == "" %}
-		{% else %}
+		{% if file.fileExtension == "png" or file.fileExtension == "jpg" or file.fileExtension == "jpeg" %}
 			<div class="col-md-4" id="showImg">
 		        <a class="fancybox" rel="gallery" href="{{ file.filePath }}">
 			        <img src="{{ file.filePath }}" class="projectImages"/>
+			    </a>
+		        <a href="{{ file.filePath }}" class="downloadLink" download>Свали файл<div class="downloadImg_icon"></div></a>
+		    </div>
+		{% else %}
+			<div class="col-md-4" id="showImg">
+		        <a rel="gallery" href="{{ file.filePath }}" target="_blank">
+			        <img src="{{ asset("images/pdf.png") }}" class="projectImages"/>
 			    </a>
 		        <a href="{{ file.filePath }}" class="downloadLink" download>Свали файл<div class="downloadImg_icon"></div></a>
 		    </div>
